		http://otland.net/
]

[ File changes:
	D = Deleted,
	M = Modified,
	A = Added.

	[ 0.3.6 pl1 for 7.9
		[ A...
			data/actions/map/
			data/actions/sscripts/quests/quests.lua
			data/world/world-house.xml
			data/world/world-spawn.xml
			data/world/world.otbm
		]
		[ M...
			config.lua
			forgottenserver.s3db
			data/
				actions/
					actions.xml
					scripts/
						tools/
							fishing.lua
			data/lib/
					000-constant.lua
					050-function.lua
					100-compat.lua
			data/items
					items.xml
					items.otb
					randomization.xml
			data/npc/
			data/monster/
			data/movements/
					movements.xml
			data/spells/
			data/weapons/
					scripts/
						burst_arrow.lua
						poison_arrow.lua
					weapons.xml
			data/XML/
					outfits.xml
		]
		[ D...
			data/actions/scripts/
							liquids/antidote_potion.lua
							liquids/berserk_potion.lua
							liquids/bullseye_potion.lua
							liquids/mastermind_potion.lua
							liquids/potions.lua
							other/enchanting.lua
							other/furniturebeds.lua
			data/movements/scripts/
							snow.lua
							swimming.lua
			data/spells/scripts/
							support/
								charge.lua
			data/weapons/scripts/
							viper_star.lua
			data/world/forgotten-house.xml
			data/world/forgotten-spawn.xml
			data/world/forgotten.otbm
			config.lua
				gamePort
				adminPort
				statusPort
		]
	]
]

[ Full changelog...
	[ 0.3.6 with 7.9 protocol
		* Add ITEM_GROUP_RUNE from 7.9 protocol. (Tryller)
		* Add new lua functions isItemRune(itemid). (Tryller)
		* Add SadSoul Map with Evolutions map. (Tryller)
		* Add GOD account to forgottenserver.s3db 2/2. (Tryller)
		* Add new shop module to npc system StdModule.allBlessings. (Tryller)
		* Add new configs from TFS 0.4 useCapacity, monsterSpawnWalkback, defaultDepotSizePremium, defaultDepotSize.
			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,