@@ -335,7 +335,8 @@ STATSCHANGE_HEALTHLOSS = 1
 STATSCHANGE_MANAGAIN = 2
 STATSCHANGE_MANALOSS = 3
 
-SKILL_FIST = 0
+SKILL_FIRST = 0
+SKILL_FIST = SKILL_FIRST
 SKILL_CLUB = 1
 SKILL_SWORD = 2
 SKILL_AXE = 3
@@ -344,6 +345,10 @@ SKILL_SHIELD = 5
 SKILL_FISHING = 6
 SKILL__MAGLEVEL = 7
 SKILL__LEVEL = 8
+SKILL__EXPERIENCE = 9
+SKILL_LAST = SKILL_FISHING
+SKILL__PRE_LAST = SKILL__LEVEL
+SKILL__LAST = SKILL__EXPERIENCE
 
 SKILL_NAMES = {
 	[SKILL_FIST] = "fist fighting",
