@@ -216,8 +216,9 @@ enum skills_t
 	SKILL_FISH,
 	SKILL__MAGLEVEL,
 	SKILL__LEVEL,
+	SKILL__EXPERIENCE,
 	SKILL_LAST = SKILL_FISH,
-	SKILL__LAST = SKILL__LEVEL
+	SKILL__LAST = SKILL__EXPERIENCE
 };
 
 enum stats_t
